--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="https://cdn.pixabay.com/photo/2016/02/19/15/46/labrador-retriever-1210559__480.jpg" alt="Image of a dog"
     <script type="text/javascript" src="./script.js">
 </script>
 
